--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 jinja2==3.1.2
-aiofiles==23.2.1 
+aiofiles==23.2.1
+reportlab==4.4.3
+Pillow==11.3.0 
