--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,9 @@ uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 jinja2==3.1.2
 aiofiles==23.2.1
-reportlab==4.4.3
-Pillow==11.3.0 
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+httpx==0.25.2
+authlib==1.2.1
+itsdangerous==2.1.2 
